[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]

[node name="UI" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = 20.0
margin_right = 150.0
margin_bottom = 84.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 16.0
margin_right = 300.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
editor/display_folded = true
margin_right = 42.0
margin_bottom = 32.0
size_flags_vertical = 4

[node name="LifeLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 42.0
margin_bottom = 14.0
text = "Health"

[node name="LifeCounter" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 42.0
margin_bottom = 32.0
text = "100%"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 257.0
margin_right = 300.0
margin_bottom = 32.0
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="AmmoLabel" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 43.0
margin_bottom = 14.0
text = "Ammo"

[node name="AmmoCounter" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 43.0
margin_bottom = 32.0
text = "25"
align = 2
